--- a/config.env
+++ b/config.env
@@ -7,3 +7,4 @@ DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=Mongoexpressjs002
 JWT_SCRET=this-is-top-screte
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
